2003/12/04 00:56 (-0500) rwmcfa1

	* xs/GtkRadioButton.xs: broken signature fixed

2003/12/03 21:13 (-0500) muppetman

	* Gtk2.pm: sync the AUTHORS section with the AUTHORS file.

	* AUTHORS: doesn't need to point to itself.  use a pointer to LICENSE
	instead of boilerplate longer than the file's contents.

2003/12/03 19:16 (-0500) rwmcfa1

	* xs/(bunch).xs: ... (list) comments corrected

	* xs/GtkTreeDnd.xs: ^ and fixed bug in api of 
	gtk_tree_drag_source_drag_data_get, selection_data is an out param.

2003/12/03 17:37 (-0500) rwmcfa1

	* xs/(bunch).xs: s/=(arg|signature)/=for $1/

2003/12/02 00:46 (-0500) muppetman

	* xs/GdkEvent.xs, xs/GdkPixmap.xs, xs/GtkObject.xs: doc

2003/12/01 23:25 (-0500) rwmcfa1

	* xs/GdkDnd.xs xs/GdkProperty.xs, xs/GtkClipboard.xs, xs/GtkDnd.xs,
	xs/GtkListStore.xs, xs/GtkSelection.xs, xs/GtkTextBuffer.xs,
	xs/GtkTreeDnd.xs, xs/GtkTreeStore.xs, xs/GtkTreeView.xs,
	xs/GtkTreeViewColumn.xs: api doc additions.


2003/11/29 16:51 (-0500) muppetman

	* t/ignore_keyboard.pl: merge test helper script from head
	* Gtk2.pm, README: bump to 1.013
	* Makefile.PL: require Glib 1.013

2003/11/29 12:21 (-0500) muppetman

	* xs/GtkMessageDialog.xs: gtk_message_dialog_new uses printf-like
	semantics and does not offer a safe literal version.  pass the message
	through "%s" to be safe, and allow Gtk2::MessageDialog->new to take
	printf-like arguments to be nice.

2003/11/29 11:23 (-0500) rwmcfa1

	* MANIFEST: missing files added

	* t/ignore_keyboard.pl: initial import

	* t/*.t: use the new ignore_keyboard.pl stuff so that tests won't fail
	if you accidentally type while they're going on.

2003/11/29 11:23 (-0500) muppetman

	* MANIFEST
	A examples/inline-images.pl: new example

	* xs/GdkPixbuf.xs: lots of pod for various hard-to-use functions.
	removed unnecessary length() parameter from new_from_inline(), which
	will break any code that was using it, but it's really hard to use
	as it is so i can't imagine anyone's using it.  if you are, i